# procon2019

./: .gitignore  CMakeLists.txt  Makefile  action.json  matches.json  post.py  readme.txt  req_map.py  req_match.py  test.py
include/: agent.hpp  ai.hpp  disp.hpp  evaluator.hpp  field.hpp  useful.hpp
params/: Makefile  optimize.cpp  param.cpp  procon.txt  test.cpp
pub_field/: readme.txt
public_field/: fields.json  txt
src/: CMakeLists.txt  agent.cpp  ai.cpp  disp.cpp  field.cpp  main.cpp  useful.cpp
src/include/: agent.hpp  field.hpp  useful.hpp
